Sun Oct 21 23:46:55 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* doc/C/gnome-mud.sgml: first draft of the GNOME-Mud Manual.
	It describes all the current features in GNOME-Mud, all the menu's,
	dialogs and toolbars. And, I had to write it twice! (luckily, this
	second version is so much better than the original).
	* doc/C/main-window.png, doc/C/preferences-window,
	doc/C/profiles-window.png: screenshots for the manual.

Fri Oct 19 18:00:18 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* src/prefs.c: fixed typos.

	* src/init.c: fixed labels of some menu entries.

Fri Oct 19 15:35:09 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* ROADMAP: Added some more entries.

Fri Oct 19 14:23:53 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/net.c [open_connection]: Fixed a small bug I added a few
	days ago :)

Fri Oct 19 13:02:18 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.desktop: removed path to icon.

Fri Oct 19 12:43:10 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am: TODO removed and ROADMAP added once again :)

Fri Oct 19 10:59:35 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/init.c [do_close]: Fixed small bug which occured if you
	closed a notebook-tag somewhere before the last tab.

	* src/wizard.c [free_connection_data]: Added #ifdef ENABLE_MCCP
	so that we are not removing non-existing timers.

Fri Oct 19 09:26:15 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* gnome-mud.desktop: Added translation into swedish.

Fri Oct 19 04:00:33 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.desktop: make "gnome-gmush.png" our icon for now.

Fri Oct 19 03:19:03 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.desktop: added GNOME menu entry for gnome-mud.
	It's missing an icon... artists around?

	* Makefile.am: install .desktop file into the apps dir.

Thu Oct 18 16:36:21 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/sv.po: updated.
