@@ -7,7 +7,7 @@
 ]>
 
 
-<!-- 
+<!--
   This is a GNOME documentation template, designed by the GNOME
   Documentation Project Team. Please use it for writing GNOME
   documentation, making obvious changes. In particular, all the words
@@ -20,7 +20,7 @@
   to remove these comments in your final documentation!  ;-)
 -->
 
-<!-- 
+<!--
       (Do not remove this comment block.)
   Maintained by the GNOME Documentation Project
   http://developer.gnome.org/projects/gdp
@@ -31,7 +31,7 @@
 
 <!-- =============Document Header ============================= -->
 
-<article id="index" lang="en"> 
+<article id="index" lang="en">
 <!-- please do not change the id; for translations, change lang to -->
 <!-- appropriate code -->
 
@@ -59,10 +59,10 @@
   <legalnotice id="legalnotice">
    <para>
     Permission is granted to copy, distribute and/or modify this document
-    under the terms of the <ulink type="help" 
+    under the terms of the <ulink type="help"
     url="gnome-help:fdl"><citetitle>GNU Free Documentation
-    License</citetitle></ulink>, Version 1.1 or any later version 
-    published by the Free Software Foundation with no Invariant Sections, 
+    License</citetitle></ulink>, Version 1.1 or any later version
+    published by the Free Software Foundation with no Invariant Sections,
     no Front-Cover Texts, and no Back-Cover Texts.  A copy of the license
     can be found <ulink type="help" url="gnome-help:fdl">here</ulink>.
    </para>
@@ -146,7 +146,7 @@
      ability to define `triggers', `aliases' and `character profiles' help
      making usual tasks like connecting to different MUDs and typing common
      names or commands more effective and fast.
-
+    </para>
     <para>
       To run <application>GNOME-Mud</application>, select
       <menuchoice>
@@ -203,7 +203,7 @@
 	  </screenshot>
 	</figure>
     <!-- ==== End of Figure ==== -->
-      </para> 
+      </para>
 
 
  <!-- For this app, one could put "proving" or "edit" (probably even
@@ -230,7 +230,7 @@
 	  in the <guilabel>Host</guilabel> and <guilabel>Port</guilabel>
 	  fields (leaving <guilabel>Port</guilabel> blank will make it
 	  default to port 23). Enter the character information in the
-	  <guilabel>Character</guilabel> and </guilabel>Password</guilabel>
+	  <guilabel>Character</guilabel> and <guilabel>Password</guilabel>
 	  (password is only required if you want to autolog into the MUD).
 	  If you want to bind the connection to a set of aliases, triggers,
 	  variables keybinds, click on <guibutton>Select Profile</guibutton>
@@ -253,7 +253,7 @@
 	  <menuchoice>
 	    <guisubmenu>File</guisubmenu>
 	    <guimenuitem>Connect...</guimenuitem>
-	  <menuchoice>,
+	  </menuchoice>,
 	  which will bring up the <interface>Quick Connect</interface> dialog.
 	  Just fill in the <guilabel>Host</guilabel> and <guilabel>Port
 	  </guilabel> fields and press <guibutton>OK</guibutton> to connect
@@ -430,7 +430,7 @@
 	    </varlistentry>
 	  </variablelist>
 	  Use the <link linkend="connecting"><interface>Connection Wizard
-	  </interface> to bind a profile to a connection.
+	  </interface></link> to bind a profile to a connection.
 	</para>
       </sect3>
 
@@ -441,7 +441,7 @@
 	  which can be used to draw maps of dungeons, roads or other zones of
 	  a MUD. It consists of a simple dialog of the eight cardinal
 	  directions (<guibutton>N</guibutton>, <guibutton>NE</guibutton>,
-	  <guibutton>E</guibutton>, <guibutton>SE</guibutton>, 
+	  <guibutton>E</guibutton>, <guibutton>SE</guibutton>,
 	  <guibutton>S</guibutton>, <guibutton>SW</guibutton>,
 	  <guibutton>W</guibutton> and <guibutton>NW</guibutton>),
 	  <guibutton>Up</guibutton> and <guibutton>Down</guibutton>.
@@ -457,8 +457,8 @@
        they belong here.   -->
 
     </sect2>
- 
-    <!-- ========================================================= 
+
+    <!-- =========================================================
       Additional Sect2's should describe additional windows, such as
       larger dialog boxes, or functionality that differs significantly
       from the most immediate functions of the application. Make the
@@ -497,7 +497,7 @@
 		 this to open a MUD connection bypassing the Connection
 		 Wizard.
                </para>
-	    </listitem> 
+	    </listitem>
 	  </varlistentry>
 	  <varlistentry>
 	    <term>Disconnect</term>
@@ -520,7 +520,7 @@
 	</variablelist>
        </para>
     </sect2>
-    <!-- ========= Menus =========================== --> 
+    <!-- ========= Menus =========================== -->
 
     <sect2 id="menubar">
 
@@ -579,6 +579,8 @@
 		    </menuchoice>
 		    &mdash; This closes a connection tab, even if the
 		    connection is still open.
+		  </para>
+		</listitem>
 		<listitem>
 		  <para>
 	            <menuchoice>
@@ -594,7 +596,7 @@
 	  </para>
 	  </listitem>
 	</varlistentry>
-	
+
 	<varlistentry>
 	  <term><guimenu>Settings</guimenu></term>
 	  <listitem>
@@ -663,7 +665,7 @@
     	              Browser</application> and displays this manual.
 	          </para>
 		</listitem>
-		
+
 		<listitem>
 		  <para>
 	            <guimenuitem>About</guimenuitem> &mdash; This
@@ -712,7 +714,7 @@
 
   <para>
    The properties in the <guilabel>Appearance</guilabel> tab are:
-   
+
    <!--many people use itemizedlists in cases like this. Variablelists
    are more appropriate -->
 
@@ -780,6 +782,9 @@
 	    <para>
 	      This is the number of commands that <application>GNOME-Mud
 	      </application> will store in it's command history.
+	    </para>
+	  </listitem>
+	</varlistentry>
       </variablelist>
     </para>
 
@@ -858,7 +863,7 @@
    This program is free software; you can redistribute it and/or
    modify it under the terms of the  <ulink type="help" url="gnome-help:gpl">
     <citetitle>GNU General Public License</citetitle></ulink> as
-   published by the Free Software Foundation; 
+   published by the Free Software Foundation;
    either version 2 of the License, or (at your option) any later
    version.
   </para>
