@@ -1,0 +1,4 @@
+
+SUBDIRS = C
+
+EXTRA_DIST = sgmldocs.make
