@@ -1,9 +1,20 @@
+Mon Oct 22 02:25:23 CEST 2001  Jordi Mallach  <jordi@sindominio.net>
+
+	* doc/C/gnome-mud.sgml: fixes (missing closing tags, etc).
+	Thanks to jfleck, of #docs@irc.gnome.org.
+
+	* doc/Makefile.am, doc/sgmldocs.make doc/C/Makefile.am,
+	doc/C/gnome-mud-C.omf: added automake and scrollkeeper files, not
+	activating it in configure.in still, not sure if things are working
+	ok still.
+
 Sun Oct 21 23:46:55 CEST 2001  Jordi Mallach  <jordi@sindominio.net>
 
 	* doc/C/gnome-mud.sgml: first draft of the GNOME-Mud Manual.
 	It describes all the current features in GNOME-Mud, all the menu's,
 	dialogs and toolbars. And, I had to write it twice! (luckily, this
 	second version is so much better than the original).
+
 	* doc/C/main-window.png, doc/C/preferences-window,
 	doc/C/profiles-window.png: screenshots for the manual.
 
